trunk/Archive2/f6/0933b018c0f147/output
main.cpp:4:1: error: 'include' does not name a type
 include <stdio>
 ^
main.cpp: In function 'int main()':
main.cpp:11:26: error: 'scanf' was not declared in this scope
     scanf("%d %d", &n, &m);
                          ^
main.cpp:12:5: error: 'vector' was not declared in this scope
     vector < vector<int> > g (n, vector<int> (n, 0)); 
     ^
main.cpp:12:5: note: suggested alternative:
In file included from /usr/local/include/c++/4.9.0/vector:64:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.0/bits/stl_vector.h:214:11: note:   'std::vector'
     class vector : protected _Vector_base<_Tp, _Alloc>
           ^
main.cpp:12:21: error: expected primary-expression before 'int'
     vector < vector<int> > g (n, vector<int> (n, 0)); 
                     ^
main.cpp:19:9: error: 'g' was not declared in this scope
         g[s][e]++;
         ^
main.cpp:23:12: error: expected primary-expression before 'int'
     vector<int> deg (n, 0);
            ^
main.cpp:26:13: error: 'deg' was not declared in this scope
             deg[i] += g[i][j];
             ^
main.cpp:26:23: error: 'g' was not declared in this scope
             deg[i] += g[i][j];
                       ^
main.cpp:29:13: error: 'deg' was not declared in this scope
     while (!deg[first])  
             ^
main.cpp:35:13: error: 'deg' was not declared in this scope
         if (deg[i] & 1)
             ^
main.cpp:35:12: warning: suggest explicit braces to avoid ambiguous 'else' [-Wparentheses]
         if (deg[i] & 1)
            ^
main.cpp:45:11: error: 'g' was not declared in this scope
         ++g[v1][v2],  ++g[v2][v1];
           ^
main.cpp:47:5: error: 'stack' was not declared in this scope
     stack<int> st;
     ^
main.cpp:47:5: note: suggested alternative:
In file included from /usr/local/include/c++/4.9.0/stack:61:0,
                 from main.cpp:3:
/usr/local/include/c++/4.9.0/bits/stl_stack.h:96:11: note:   'std::stack'
     class stack
           ^
main.cpp:47:11: error: expected primary-expression before 'int'
     stack<int> st;
           ^
main.cpp:48:5: error: 'st' was not declared in this scope
     st.push (first);
     ^
main.cpp:49:12: error: expected primary-expression before 'int'
     vector<int> res;
            ^
main.cpp:55:17: error: 'g' was not declared in this scope
             if (g[v][i])
                 ^
main.cpp:59:13: error: 'res' was not declared in this scope
             res.push_back (v);
             ^
main.cpp:64:15: error: 'g' was not declared in this scope
             --g[v][i];
               ^
main.cpp:71:33: error: 'res' was not declared in this scope
         for (int i = 0; i + 1 < res.size(); ++i)
                                 ^
main.cpp:74:24: error: expected primary-expression before 'int'
                 vector<int> res2;
                        ^
main.cpp:76:21: error: 'res2' was not declared in this scope
                     res2.push_back (res[j]);
                     ^
main.cpp:78:21: error: 'res2' was not declared in this scope
                     res2.push_back (res[j]);
                     ^
main.cpp:79:23: error: 'res2' was not declared in this scope
                 res = res2;
                       ^
main.cpp:85:25: error: 'g' was not declared in this scope
                     if (g[i][j])
                         ^
main.cpp:89:28: error: 'printf' was not declared in this scope
                 printf("-1");
                            ^
main.cpp:91:32: error: 'res' was not declared in this scope
                 printf("%d\n", res.size());
                                ^
main.cpp:91:42: error: 'printf' was not declared in this scope
                 printf("%d\n", res.size());
                                          ^
